--- a/render/index.html
+++ b/render/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1 id = "my_h1"></h1>
+    <br>
+    <h1 id = 'count'>0</h1>
+    <button id = 'increase'>increase</button>
+    <button id = 'reset'>reset</button>
+    <button id = 'decrease'>decrease</button>
+    <script src = "/Users/apple/Desktop/%d/Project-Ejaculation/index.js"></script>
+    
 </body>
 </html>
