--- a/renderer/index.html
+++ b/renderer/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <script src = "Project-Ejaculation/renderer/index.html"></script>
+    <h1>Hello</h1>
 </body>
 </html>
