--- a/render/index.html
+++ b/render/index.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        /* Flexbox layout */
+        .button-container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start; /* Align items to the start (left) */
+            gap: 20px; /* Gap between button and count */
+        }
+
+        /* Style for the count */
+        .count {
+            font-size: 75px;
+        }
+    </style>
 </head>
 <body>
-    <h1 id = "my_h1"></h1>
-    <br>
-    <h1 id = 'count'>0</h1>
-    <button id = 'increase'>increase</button>
-    <button id = 'reset'>reset</button>
-    <button id = 'decrease'>decrease</button>
-    <script src = "/Users/apple/Desktop/%d/Project-Ejaculation/index.js"></script>
-    
+    <h1 id="my_h1"></h1>
+    <div class="button-container">
+        <button id='bjp'><img src="/Users/apple/Desktop/%d/Project-Ejaculation/bjp.png" width="100" height="100"></button>
+        <p3 id='bjp_count' class="count">0</p3>
+    </div>
+    <div class="button-container">
+        <button id='congress'><img src="/Users/apple/Desktop/%d/Project-Ejaculation/congress.png" width="100" height="100"></button>
+        <p3 id='congress_count' class="count">0</p3>
+    </div>
+    <div class="button-container">
+        <button id='aap'><img src="/Users/apple/Desktop/%d/Project-Ejaculation/aap.png" width="100" height="100"></button>
+        <p3 id='aap_count' class="count">0</p3>
+    </div>
+    <script src='/Users/apple/Desktop/%d/Project-Ejaculation/index.js'></script>
 </body>
 </html>
