--- a/render/index.html
+++ b/render/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main">
         <video autoplay muted loop class="background-video" id = 'bak'>
-            <source src ="vid.mp4" type="video/mp4">
+            <source src ="Assets/vid.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <nav class="nav__bar">
@@ -27,8 +27,8 @@
                 <h4>Browse-By-Year</h4>
                 <input type="text" class="search-input">
                 <div class = buttons>
-                    <button class="nav-button-search"><i class = 'fa fa-search'></i></button>
-                    <button class="nav-button"><i class = 'fa fa-bell'></i></button>
+                    <button class="nav-button-search" id="search"><i class = 'fa fa-search'></i></button>
+                    <button class="nav-button" id="bell"><i class = 'fa fa-bell'></i></button>
                     <button class="nav-button"><i class = 'fa fa-user'></i></button>
                 </div>
             </div>
@@ -37,25 +37,21 @@
     </div>
     <main>
         <div class = 'text-on-vid'>
-            <img src="it2.png" alt="" width="300px">
+            <img src="Assets/it2.png" alt="" width="300px">
             <p id = 'discription'>Embark on the craziest journey of your life in It Takes Two. Invite a friend to join for free with Friend’s Pass and work together across a huge variety of gleefully disruptive gameplay challenges. Winner of GAME OF THE YEAR at the Game Awards 2021.</p>
             <button id = 'play'>PLAY</button>
             <button id = 'more-info'>MORE-INFO</button>
         </div>
         <div class ='vertical'>
-            <img src="up.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
-            <img src="home.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
-            <img src="download.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
-            <img src="addons.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
-            <img src="settings.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
-            <img src="down.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
+            <img src="Assets/Icons/up.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
+            <img src="Assets/Icons/home.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
+            <img src="Assets/Icons/download.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
+            <img src="Assets/Icons/addons.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
+            <img src="Assets/Icons/settings.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
+            <img src="Assets/Icons/down.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
             
         </div>
     </main>
-    <script>
-        var video = document.getElementById("backgroundVideo");
-        video.muted = false;
-        video.volume = 0.3; // Adjust volume between 0 and 1
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
