--- a/render/index.html
+++ b/render/index.html
@@ -32,6 +32,10 @@
                     <button class="nav-button"><i class = 'fa fa-user'></i></button>
                 </div>
             </div>
+            <!-- this is for opening the menu in smol screens (it just works dont ask me) -->
+            <div class="hamburger-menu" id="menu-toggle"> 
+                <i class="fa fa-bars"></i>
+            </div>
         </nav>
         <div class="box"></div>  
     </div>
@@ -48,8 +52,7 @@
             <img src="Assets/Icons/download.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
             <img src="Assets/Icons/addons.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
             <img src="Assets/Icons/settings.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
-            <img src="Assets/Icons/down.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>
-            
+            <img src="Assets/Icons/down.png" alt="" width="40px"><button class = 'vertical_buttons'></button></img>      
         </div>
     </main>
     <script src="index.js"></script>
