--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -54,9 +54,9 @@
             <img src="../Assets/Icons/settings.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
             <img src="../Assets/Icons/down.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>      
         </div>
-        <!-- <div class = 'vid_controls'>
+        <div class = 'vid_controls'>
             <img src = '../Assets/Icons/unmute.png' width = 40px id="vol_button"/>
-        </div> -->
+        </div>
     </main>
     <script src="index.js"></script>
 </body>
