--- a/render/library_page/library.html
+++ b/render/library_page/library.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fuck Everyone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="library.css">
-    <title>FUCK ME</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <h1>Library</h1>
+    <div class = "nav__bar">
+        <h1 id = 'nav__name'>{Name}</h1>
+        <input type="text">
+        <button><i class = 'fa fa-search'></i></button>
+    </div>
     <main>
         <div class ='vertical_navbar'>
             <img src="../Assets/Icons/up.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
