--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -55,7 +55,7 @@
             <img src="../Assets/Icons/down.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>      
         </div>
         <div class = 'vid_controls'>
-            <img src = '../Assets/Icons/unmute.png' width = 40px id="vol_button"/>
+            <img src = '../Assets/Icons/mute.png' width = 40px id="vol_button"/>
         </div>
     </main>
     <script src="index.js"></script>
