--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -1,63 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fuck Everyone</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
-    <div class="main">
-        <video autoplay muted loop class="background-video" id = 'bak'>
-            <source src ="..\Assets\vid.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div class = 'text-on-vid'>
-            <img src="..\Assets\it2.png" alt="" width="300px">
-            <p id = 'discription'>Embark on the craziest journey of your life in It Takes Two. Invite a friend to join for free with Friend’s Pass and work together across a huge variety of gleefully disruptive gameplay challenges. Winner of GAME OF THE YEAR at the Game Awards 2021.</p>
-            <button id = 'play'>PLAY</button>
-            <button id = 'more-info'>MORE-INFO</button>
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <main class="text-light">
+      <div>
+        <div>
+          <video class="object-fit-cover w-100 h-100 position-absolute z-n1" autoplay loop muted>
+            <source src="../Assets/vid.mp4" type="video/mp4" />
+          </video>
         </div>
-        <nav class="nav__bar">
-            <span class="nav__name"><h1>{Name}</h1></span>
-            <div class="nav__links">
-                <h4 class = 'nav_buttons'>Home</h4>
-                <h4 class = 'nav_buttons'>AAA-Titles</h4>
-                <h4 class = 'nav_buttons'>Indie-Titles</h4>
-                <h4 class = 'nav_buttons'>New-&-Popular</h4>
-                <h4 class = 'nav_buttons'>My-List</h4>
-                <h4 class = 'nav_buttons'>Browse-By-Year</h4>
-                <input type="text" class="search-input">
-                <div class = buttons>
-                    <button class="nav-button-search" id="search"><i class = 'fa fa-search'></i></button>
-                    <button class="nav-button" id="bell"><i class = 'fa fa-bell'></i></button>
-                    <button class="nav-button"><i class = 'fa fa-user'></i></button>
-                </div>
-            </div>
-            <!-- this is for opening the menu in smol screens (it just works dont ask me) -->
-            <div class="hamburger-menu" id="menu-toggle"> 
-                <i class="fa fa-bars"></i>
-            </div>
+        <div class="text-on-vid position-absolute z-1">
+          <img src="../Assets/it2.png" width="300px">
+          <p>Embark on the craziest journey of your life in It Takes Two. Invite a friend to join for free with Friend’s Pass and work together across a huge variety of gleefully disruptive gameplay challenges. Winner of GAME OF THE YEAR at the Game Awards 2021.</p>
+          <button class="btn btn-dark btn-lg">PLAY</button>
+          <button class="btn btn-dark btn-lg">MORE-INFO</button>
+        </div>
+        <nav class="nav__bar position-absolute z-1">
+          <h1 class="nav__name fw-bold">{Name}</h1>
+          <div class="nav__links">
+            <h4 class = 'nav_buttons'>Home</h4>
+            <h4 class = 'nav_buttons'>AAA-Titles</h4>
+            <h4 class = 'nav_buttons'>Indie-Titles</h4>
+            <h4 class = 'nav_buttons'>New-&-Popular</h4>
+            <h4 class = 'nav_buttons'>My-List</h4>
+            <h4 class = 'nav_buttons'>Browse-By-Year</h4>
+            <div class="search-container">
+              <input type="text" name="search" placeholder="Search" class="search-input">
+              <a href="#" class="search-btn">
+                      <i class="fas fa-search" style="color:black;"></i>      
+              </a>
+          </div>
+          <img src="../Assets/Icons/bell.png" class="me-4" style="width: 30px;">
+          <img src="../Assets/Icons/user.png" class="me-4" style="width: 34px;">
         </nav>
-        <div class="box"></div>
-    </div>
-    <main>
-        <div class ='vertical'>
-            <img src="../Assets/Icons/up.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
-            <img src="../Assets/Icons/home.png" alt="" width="40px" id="home" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
-            <img src="../Assets/Icons/download.png" alt="" width="40px" id="download" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
-            <img src="../Assets/Icons/addons.png" alt="" width="40px" id="lib" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
-            <img src="../Assets/Icons/settings.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
-            <img src="../Assets/Icons/down.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>      
-        </div>
-        <div class = 'vid_controls'>
-            <img src = '../Assets/Icons/mute.png' width = 40px id="vol_button"/>
-        </div>
+      </div>
+      <div class="box"></div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
