--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -37,9 +37,13 @@
               <a href="#" class="search-btn">
                       <i class="fas fa-search" style="color:black;"></i>      
               </a>
+            </div>
+            <img src="../Assets/Icons/bell.png" class="me-4" style="width: 30px;">
+            <img src="../Assets/Icons/user.png" class="me-4" style="width: 34px;">
           </div>
-          <img src="../Assets/Icons/bell.png" class="me-4" style="width: 30px;">
-          <img src="../Assets/Icons/user.png" class="me-4" style="width: 34px;">
+          <div class="hamburger-menu" id="menu-toggle"> 
+            <img src="../Assets/Icons/menu.png" class="me-4" style="width: 30px">
+          </div>
         </nav>
       </div>
       <div class="box"></div>
