added some things

--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -35,7 +35,7 @@
             <div class="search-container">
               <input type="text" name="search" placeholder="Search" class="search-input">
               <a href="#" class="search-btn">
-                      <i class="fas fa-search" style="color:black;"></i>      
+                      <i class="fas fa-search search-icon" style="color:black;"></i>      
               </a>
             </div>
             <img src="../Assets/Icons/bell.png" class="me-4" style="width: 30px;">
