--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -46,6 +46,14 @@
           </div>
         </nav>
       </div>
+      <div class = "vertical_navbar">
+        <img src="../Assets/Icons/up.png"alt="" style="width:40px;" class = "vertical_buttons" id = "up">
+        <img src="../Assets/Icons/home.png"alt="" style="width: 40px;" class = "vertical_buttons" id = "home">
+        <img src="../Assets/Icons/download.png"alt="" style="width: 40px;" class = "vertical_buttons" id = "download">
+        <img src="../Assets/Icons/addons.png"alt="" style="width: 40px;" class = "vertical_buttons" id = "lib">
+        <img src="../Assets/Icons/settings.png"alt="" style="width: 40px;" class = "vertical_buttons" id = "settings">
+        <img src="../Assets/Icons/down.png"alt="" style="width: 40px;" class = "vertical_buttons" id = "down">     
+      </div>
       <div class="box"></div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
