--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -31,7 +31,7 @@
           <img id="Logo" src="" width="300px">
           <p id="summary"></p>
           <button class="btn btn-dark btn-lg">PLAY</button>
-          <button class="btn btn-dark btn-lg">MORE-INFO</button>
+          <button class="btn btn-dark btn-lg" id="more-info">MORE-INFO</button>
         </div>
         <nav class="nav__bar position-absolute z-1">
           <h1 class="nav__name fw-bold">{Name}</h1>
@@ -67,6 +67,6 @@
       <div class="box"></div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script type="module" src="test.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
