--- a/render/more-info/more-info.html
+++ b/render/more-info/more-info.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
     <title>MORE FUCKING</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -10,8 +11,10 @@
     <link href="more-info.css" rel="stylesheet">
 </head>
 <body>
-    <h1>More-Info</h1>
     <main>
+        <div>
+            <img id="Banner" src="" width="100%" height="300px">
+        </div>
         <div class ='vertical_navbar'>
             <img src="../Assets/Icons/up.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
             <img src="../Assets/Icons/home.png" alt="" width="40px" id="home" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
