--- a/render/more-info/more-info.html
+++ b/render/more-info/more-info.html
@@ -12,9 +12,12 @@
 </head>
 <body>
     <main>
-        <div>
-            <img id="Banner" src="" width="100%" height="300px">
-        </div>
+        <div class="header">
+            <div class = "upper_nav"></div>
+            <div class = "header_image"><img  id="Banner" src="" style="width: 100vw;"></div>
+            <div class = "logo"><img id="Logo" src=""></div>
+            <div class = "lower_nav"></div>
+        </div> 
         <div class ='vertical_navbar'>
             <img src="../Assets/Icons/up.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
             <img src="../Assets/Icons/home.png" alt="" width="40px" id="home" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
