--- a/render/more-info/more-info.html
+++ b/render/more-info/more-info.html
@@ -20,7 +20,7 @@
         </div> 
         <div class = "bund">
             <div class = "poster"><img id="Cover" src=""></div>
-            <div class = "vid_box"><video id="Vid" src="" ></video></div>
+            <div class = "vid_box"><video id="Vid" src="" autoplay loop muted></video></div>
         </div>
         <div class ='vertical_navbar'>
             <img src="../Assets/Icons/up.png" alt="" width="40px" class = 'vertical_icons'><button class = 'vertical_buttons'></button></img>
