--- a/render/more-info/more-info.html
+++ b/render/more-info/more-info.html
@@ -14,9 +14,14 @@
     <main>
         <div class="header">
             <div class = "upper_nav"></div>
-            <div class = "header_image"><img  id="Banner" src=""></div>
-            <div class = "logo"><img id="Logo" src=""></div>
+            <div class = "header_image"><img  id="Banner" src="" style = "width: 100vw;"></div>
+            <div class = "logo">
+                <div class = 'fit'>
+                    <img src="" alt="" id = "Logo">
+                </div>
+            </div>
             <div class = "lower_nav"></div>
+            <div class = "name"><h2 id = "name_game"></h2></div>
         </div> 
         <div class = "bund">
             <div class = "poster"><img id="Cover" src=""></div>
