--- a/render/index_page/index.html
+++ b/render/index_page/index.html
@@ -21,9 +21,11 @@
         <div class="text-on-vid position-absolute z-1">
           <img id="Logo" src="" width="300px">
           <p id="summary"></p>
-          <button class="btn btn-dark btn-lg">PLAY</button>
-          <button class="btn btn-dark btn-lg" id="more-info">MORE-INFO</button>
-          <img class="vid_controls" src = '../Assets/Icons/mute.png' width = 50px id="vol_button"/>
+          <div class="bttn">
+            <button class="btn btn-dark btn-lg">PLAY</button>
+            <button class="btn btn-dark btn-lg" id="more-info">MORE-INFO</button>
+            <img class="vid_controls" src = '../Assets/Icons/mute.png' width = 50px id="vol_button"/>
+          </div>
         </div>
         <nav class="nav__bar position-absolute z-1">
           <h1 class="nav__name fw-bold">{Name}</h1>
